--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>filmes</h2>
         <button id="botaoGrande" class="botaoTamanho">digite um filme aqui</button>
         <button id="botaoPreto" class="botaoTamanho">pesquisar</button>
-        
+        <div class="ordemDivs">
             <div>
                 <img src="images/filme_1.png" alt="estrelas além do tempo">
                 <button class="botaoTamanho">veja o trailer</button>
@@ -41,7 +41,8 @@
                 <img src="images/filme_4.jpg" alt="rainha de katwe">
                 <button class="botaoTamanho">veja o trailer</button>
             </div>
-      
+      </div>
+        <div class="ordemDivs">
             <div>
                 <img src="images/filme_5.jpg" alt="kill bill">
                 <button class="botaoTamanho">veja o trailer</button>
@@ -57,7 +58,7 @@
                 <img src="images/filme_8.png" alt="jackie bronw">
                 <button class="botaoTamanho">veja o trailer</button>
             </div>
-
+        </div>
             <h2>Destaque do mês</h1>
             <img src="images/jackie.jpg" alt="jackie">
             <h1>Jackie Brown</h1>
